--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="he" dir="rtl">
+<!-- <html lang="he" dir="rtl"> -->
+<html lang="iw" dir="rtl">
   <head prefix="og: http://ogp.me/ns#">
     <meta charset="utf-8" />
     <meta name="mobile-web-app-capable" content="yes" />
