--- a/public/index.html
+++ b/public/index.html
@@ -5,12 +5,17 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes" />
+    <meta
+      name="viewport"
+      content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=yes"
+    />
     <link rel="canonical" href="https://kishuritt.vercel.app/" />
     <meta name="application-url" content="https://kishuritt.vercel.app/" />
 
-
-    <meta name="google-site-verification" content="INZ1lPlJ4uJihxsPJiYcnm62efEwDySXzWSfo5iZfIQ" />    
+    <meta
+      name="google-site-verification"
+      content="INZ1lPlJ4uJihxsPJiYcnm62efEwDySXzWSfo5iZfIQ"
+    />
     <meta name="robots" content="index, follow, noodp, noydir" />
     <meta name="googlebot" content="index, follow, noodp, noydir" />
     <meta name="bingbot" content="index, follow, noodp, noydir" />
@@ -19,39 +24,60 @@
 
     <meta name="title" content="קישורית" />
     <meta name="application-name" content="קישורית" />
-    <meta name="image" content="/newjob.jpg" />  
-    <meta name="description" content="פרסום עצמאיים ובעלי עסקים שפונו מאוזרי הגבול" />
-    <meta name="keywords" content="עבודה, עצמאיים, בעלי עסקים, טכנאי, אינסטלטור, מורה, ספר" />
+    <meta name="image" content="/newjob.jpg" />
+    <meta
+      name="description"
+      content="פרסום עצמאיים ובעלי עסקים שפונו מאוזרי הגבול"
+    />
+    <meta
+      name="keywords"
+      content="עבודה, עצמאיים, בעלי עסקים, טכנאי, אינסטלטור, מורה, ספר"
+    />
     <meta name="author" content="https://www.facebook.com/RonenBr60" />
 
     <link rel="icon" href="/newjob.jpg" />
     <link id="favicon" rel="shortcut icon" href="/newjob.jpg" />
     <link rel="apple-touch-icon" href="/newjob.jpg" />
-   
+
     <!-- Google Search Engine Tags -->
     <meta itemprop="name" content="קישורית" />
-    <meta itemprop="description" content="פרסום עצמאיים ובעלי עסקים שפונו מאוזרי הגבול" />
+    <meta
+      itemprop="description"
+      content="פרסום עצמאיים ובעלי עסקים שפונו מאוזרי הגבול"
+    />
     <meta itemprop="image" content="/newjob.jpg" />
 
     <!-- Facebook open graph -->
     <meta property="og:locale" content="he_IL" />
     <meta property="og:title" content="קישורית" />
     <meta property="og:site_name" content="קישורית" />
-    <meta property="og:description" content="פרסום עצמאיים ובעלי עסקים שפונו מאוזרי הגבול" />
+    <meta
+      property="og:description"
+      content="פרסום עצמאיים ובעלי עסקים שפונו מאוזרי הגבול"
+    />
     <meta property="og:url" content="https://kishuritt.vercel.app/" />
-    <meta property="og:type" content="website" />		
+    <meta property="og:type" content="website" />
     <meta property="og:image" content="/newjob.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
-  	<meta property=”fb:pages” content="110682567074630" />
+    <meta property="”fb:pages”" content="110682567074630" />
 
-    <meta property="og:description" content="פרסום עצמאיים ובעלי עסקים שפונו מאוזרי הגבול" />
+    <meta
+      property="og:description"
+      content="פרסום עצמאיים ובעלי עסקים שפונו מאוזרי הגבול"
+    />
 
     <!-- Twitter open graph -->
     <meta name="twitter:title" content="קישורית" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ronenbr60" />
-    <meta name="twitter:description" content="פרסום עצמאיים ובעלי עסקים שפונו מאוזרי הגבול" />
-    <meta name="twitter:text:description" content="פרסום עצמאיים ובעלי עסקים שפונו מאוזרי הגבול" />
+    <meta
+      name="twitter:description"
+      content="פרסום עצמאיים ובעלי עסקים שפונו מאוזרי הגבול"
+    />
+    <meta
+      name="twitter:text:description"
+      content="פרסום עצמאיים ובעלי עסקים שפונו מאוזרי הגבול"
+    />
     <meta name="twitter:image" content="/newjob.jpg" />
     <meta name="twitter:image:src" content="/newjob.jpg" />
 
@@ -74,6 +100,20 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-H8KH2KG6JW"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-H8KH2KG6JW");
+    </script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
