--- a/public/index.html
+++ b/public/index.html
@@ -31,9 +31,9 @@
     />
     <meta
       name="keywords"
-      content="עבודה, עצמאיים, בעלי עסקים, טכנאי, אינסטלטור, מורה, ספר"
+      content="עבודה, עצמאיים, בעלי עסקים, טכנאי, אינסטלטור, מורה, ספר, מלחמה, חרבות ברזל, מפונים"
     />
-    <meta name="author" content="https://www.facebook.com/RonenBr60" />
+    <meta name="author" content="https://www.facebook.com/profile.php?id=100015066255946" />
 
     <link rel="icon" href="/newjob.jpg" />
     <link id="favicon" rel="shortcut icon" href="/newjob.jpg" />
@@ -59,7 +59,6 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/newjob.jpg" />
     <meta property="og:image:type" content="image/jpeg" />
-    <meta property="”fb:pages”" content="110682567074630" />
 
     <meta
       property="og:description"
@@ -69,7 +68,6 @@
     <!-- Twitter open graph -->
     <meta name="twitter:title" content="קישורית" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@ronenbr60" />
     <meta
       name="twitter:description"
       content="פרסום עצמאיים ובעלי עסקים שפונו מאוזרי הגבול"
